# costrm

./: .gitignore  CMakeLists.txt  CMakePresets.json  _launch.vs.json_bkp  packages.ps1  packages.py  presets.py
cmake/: BoostHelper.cmake  EnsureCefThree.cmake  EnsurePyEmbed.cmake  ForbiddenHebrewSorcery000.cmake  PropHelper.cmake  PyPath.cmake
src/: costrm.h.in  main.cpp  util.cpp  util.h  zz.py
src/cef/: CMakeLists.txt  cefmain.cpp
